--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "teamup-gatewayservice",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
+  "main": "src/index.js",
+  "description": "Gateway microservice for TeamUp",
   "author": "",
   "license": "ISC",
-  "description": "",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
+  },
+  "keywords": [],
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3"
   }
