--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "teamup-gatewayservice",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "gateway-service",
   "type": "module",
+  "version": "1.0.0",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node src/index.js",
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0"
   }
 }
