--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0"
   }
 }
